# aic-kb

./: .aider.conf.yml  .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.txt
.github/: dependabot.yml
.github/workflows/: tests.yml
ai_docs/: async_mock.md  coroutine_not_awaited.md  craw4ai_track_redirects.py  crawl4ai.md  crawl4ai_hooks.md  crawlresult_ref.md  litellm_token_tracking.md  rich_pbar.md
aic_kb/: cli.py
aic_kb/agents/: bank_support.py  hello_world.py  rag.py
aic_kb/pypi_doc_scraper/: __init__.py  crawl.py  extract.py  init_db.sql  store.py  types.py
aic_kb/search/: search.py  types.py
specs/: initial_implementation.md  recursive-crawl.md  spec_template.example.md
tests/: conftest.py  test_cli.py
tests/pypi_doc_scraper/: test_crawl.py  test_extract.py  test_init.py  test_store.py
workflows/: evaluator_optimizer.py
