[project]
name = "aic-kb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider-chat>=0.71.1",
    "crawl4ai>=0.4.24",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "B008"]

[[tool.mypy.overrides]]
module = [
    "aider.coders.*",
    "aider.io.*",
    "aider.models.*",
    "yaml"
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
aic-kb = "aic_kb.cli:main"
